2014-11-01  Jim Fowler  <jrf@Biblion>

	* WebPages/BookBinding.txt: Added Affordable Binding Equipment,
	Bookbinders Chronicle, and Amanda Buck.

2014-10-04  Jim Fowler  <jrf@Biblion>

	* WebPages/BookBinding.php: Added Book Binding web page
	to store information and history of book binding.

2014-09-28  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: added less than or equal and
	greater than or equal signs.

2014-09-27  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/utils.py: Updated Suffix addition to support
	nameparser_0.3.3.  The new version of nameparser was installed
	today.

2014-09-17  Jim Fowler  <jrf@Biblion>

	* WebPages/BlogLists.txt: added Books and Buildings page from
	tumblr.com.

2014-09-16  Jim Fowler  <jrf@Biblion>

	* WebPages/BlogLists.txt: Added Michael Moons Bookshop

2014-06-27  Jim Fowler  <jrf@Biblion>

	* Docs/history_notes.tex: Added history_notes to the general
	Notes.tex.

2014-04-06  Jim Fowler  <jrf@Biblion>

	* Docs/socsci_notes.tex: Added section to Notes.tex for notes
	about the sociology of science.

	* Tools/bookentry/symbols.txt: added capital E with grave and
	acute accents.

2014-04-04  Jim Fowler  <jrf@Biblion>

	* Data/Ajb: finished proofreading ajb52_books.txt

2014-01-01  Jim Fowler  <jrf@Biblion>

	* Docs/world_history_notes.tex: added to Notes.tex inorder
	to keep some notes about world history.

2013-12-24  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: Added H with dot below.

2013-12-23  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/mainWindow.py (BookEntry.setMaxEntryNumber):
	When entries are added to a new file, the prev/next buttons
	become active.

	* Tools/ajbbooks: added version flag

2013-12-22  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: Added 'power X', arcseconds,
	and arcminutes.

2013-12-21  Jim Fowler  <jrf@Biblion>

	* Tools/ajbbooks (getargs): Added version flag to ajbbooks.

2013-12-19  Jim Fowler  <jrf@Biblion>
