@@ -14,6 +14,7 @@
   <br><a href="http://library-cafe.org">Library Cafe</a>
   <br><a href="http://michaelmoonsbookshop.tumblr.com/">Michael Moon's Bookshop</a>
   <br><a href="http://booksnbuildings.tumblr.com/"/">Books and Buildings</a>
+  <br><a href="http://callumjames.blogspot.com/">Front Free Endpaper</a>
 </td>
 
 
@@ -51,6 +52,7 @@
   <br><a href="http://booksandtea.tumblr.com">Books and Tea</a>
   <br><a href="http://adventuresofnuu.tumblr.com">Adventures of Nuu</a>
   <br><a href="http://bookmania.me/">Book Mania!</a>
+  <br><a href="http://youth25.tumblr.com/">Architecture</a>
 
 
 </td>
