@@ -13,6 +13,9 @@
   <br><a href="http://www.talasonline.com/">Talas supplies</a>
   <br><a href="http://www.shopbrodart.com/library-supplies-school-supplies/book-care/">Brodart</a>
   <br><a href="http://www.affordablebindingequipment.com/">Affordable Binding Equipment</a>
+  <br><a href="http://www.hollanders.com/index.php/">Hollanders</a>
+  <br><a href="http://bookbinding.com/">BookBinding.com</a>
+  <br><a href="https://guildofbookworkers.org/content/us-supplies-services">List of Suppliers</a>
 </td>
 
 <td width=250 height=250 valign="Top">
@@ -43,6 +46,13 @@
 <tr valign="Top">
 
 <td width=250 height=250 valign="Top">
+  <h3>Binders</h3>
+
+  <a href="http://www.cattailrun.com/">Cat Tail Run</a>
+  <br><a href="http://bookbindingacademy.org/">Amer. Acad. Bookbinding</a>
+</td>
+
+<td width=250 height=250 valign="Top">
   <h3></h3>
 
   <br><br>Soon to be more...
@@ -54,7 +64,5 @@
 
 </td>
 
-<td>
-</td>
 </tr>
 
