@@ -1,3 +1,12 @@
+2014-11-29  Jim Fowler  <jrf@Biblion>
+
+	* WebPages/BookBinding.txt: added Hollanders supplies.
+
+2014-11-15  Jim Fowler  <jrf@Biblion>
+
+	* WebPages/BlogLists.txt: added youth25.tumblr.com and
+	callumjames.blogspot.com
+
 2014-11-01  Jim Fowler  <jrf@Biblion>
 
 	* WebPages/BookBinding.txt: Added Affordable Binding Equipment,
